# ExternalSorting

./: .gitignore  CMakeLists.txt  README.md
include/: auxiliary_function.h  file_input.h  file_operator.h  file_output.h  shared_data.h
src/: CMakeLists.txt  auxiliary_function.cpp  file_input.cpp  file_operator.cpp  file_output.cpp  main.cpp  shared_data.cpp
